@@ -1,3 +1,9 @@
+2007-02-02  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: emacs/kahua.el
+	  Now run-kahua-shell prompt your site bundle, and work
+	  directory completion.
+
 2007-02-01  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: skel/configure.ac, skel/INSTALL, skel/Makefile.in,
